[gd_scene load_steps=6 format=3 uid="uid://cnj50l08uj3x"]

[ext_resource type="Texture2D" uid="uid://b7iuc2wotiwd7" path="res://Sprites/spotlight_alpha.png" id="1_ri42s"]
[ext_resource type="Script" path="res://Scripts/Light.gd" id="2_pakwd"]
[ext_resource type="Texture2D" uid="uid://us4q2t55un4o" path="res://Sprites/spotlight_mask.png" id="3_i4405"]
[ext_resource type="Texture2D" uid="uid://cqgv65t784pcd" path="res://Sprites/shadow.png" id="4_foh10"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6qi3k"]
size = Vector2(530, 500)

[node name="Light" type="Sprite2D" node_paths=PackedStringArray("shadow")]
texture = ExtResource("1_ri42s")
offset = Vector2(0, 256)
script = ExtResource("2_pakwd")
shadow = NodePath("LightMask/PlayerShadow")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 200)
shape = SubResource("RectangleShape2D_6qi3k")

[node name="LightMask" type="Sprite2D" parent="."]
clip_children = 1
texture = ExtResource("3_i4405")
offset = Vector2(0, 300)

[node name="PlayerShadow" type="Sprite2D" parent="LightMask"]
visible = false
position = Vector2(0, 500)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_foh10")
flip_v = true

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
